# Exalt-Training-Project

./: CMakeLists.txt  README.md
includes/: Course.hpp  Day.hpp  Dean.hpp  Department.hpp  Faculty.hpp  Lecturer.hpp  Registrar.hpp  Student.hpp  University.hpp
src/: Course.cpp  Dean.cpp  Department.cpp  Faculty.cpp  Lecturer.cpp  Registrar.cpp  Student.cpp  University.cpp  main.cpp
